# BMP280_V4

./: .gitmodules  CMakeLists.txt  README.md
BMP280_Driver/: CMakeLists.txt
BMP280_Driver/Inc/: BMP280.h  BMP280.hpp  BMP280_Defines.hpp  BMP280_Structs.hpp  SPIHandler.hpp  SensorBase.hpp
BMP280_Driver/Src/: BMP280.c  BMP280.cpp  SPIHandler.cpp
Core/Inc/HAL_Init/: hal_impl.hpp  hal_interface.hpp  init.h
Core/Src/: main.cpp  stm32l4xx_hal_msp.c  stm32l4xx_it.c
Core/Src/HAL_Init/: hal_impl.cpp  init.c  setup_hal.cpp
Modules/: stm32l4cube.cmake
